@@ -1,3 +1,4 @@
+    FIXED: [ 2543170 ] Crashes on mouse wheel in brief view
     FIXED: [ 2553396 ] Krusader exits after closing KrViewer
     FIXED: [ 2563664 ] Krusader always trashes (not deletes) files
     FIXED: tar.bz2 doesn't always detected automatically
